--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/media-queries.css">
   <link rel="stylesheet" href="css/magnific-popup.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Script -->
 	<script src="js/modernizr.js"></script>
@@ -40,7 +41,6 @@
                 <li><a class="smoothscroll" href="#resume">Angebot</a></li>
                 <li><a class="smoothscroll" href="#contact">Kontakt</a></li>
             </ul>
-
         </nav>
 
         <div class="row banner">
@@ -51,16 +51,11 @@
                   Forschen und Archivieren,
                   in Geschichts- und Kulturprojekten ...
                 </h3>
-                <ul class="social">
-                    <li><a href="https://twitter.com/nuritnt/"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/nuritnt/"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/nuritnt"><i class="fa fa-github"></i></a></li>
-                </ul>
             </div>
         </div>
 
         <p class="scrolldown">
-            <a class="smoothscroll" href="#about"><i class="icon-down-circle"></i></a>
+            <a class="smoothscroll" href="#about"><i class="fa fa-chevron-circle-down fa-lg"></i></a>
         </p>
 
     </header> <!-- Header End -->
@@ -102,6 +97,7 @@
             </div>
 
             <div class="nine columns main-col">
+              <h3>Textarbeit</h3>
 
             </div>
 		</div>
@@ -166,7 +162,7 @@
                 </ul>
 
             </div>
-            <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
+            <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-chevron-circle-up fa-lg"></i></a></div>
 
         </div>
 
