--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           <h2>Textarbeit</h2>
         </div>
         <div class="nine columns main-col">
+          <h2 class="title">«Bleiwüste, Schreibstau, Buchstabensalat?
+            Meine Texte sind zugeschnitten auf Ihre Botschaft
+            und auf Ihr Zielpublikum.»</h2>
           <div class="row texte">
             <div class="six columns main-col">
               <h3>Texte aller Art</h3>
@@ -122,6 +125,10 @@
           <h2>Forschung</h2>
         </div>
         <div class="nine columns main-col">
+          <h2 class="title">«Jubiläum oder Kulturprojekt?
+            Ich vermittle Inhalte so, dass sie attraktiv
+            und verständlich sind.»
+          </h2>
           <div class="row">
             <div class="six columns main-col">
               <h3>Recherchen</h3>
@@ -143,6 +150,10 @@
           <h2>Archivierung</h2>
         </div>
         <div class="nine columns main-col">
+          <h2 class="title">«Chaos im Archiv?
+            Mein Ziel ist nicht Perfektion, sondern eine
+            pragmatische Lösung für Ihr Problem.»
+          </h2>
           <div class="row">
             <div class="six columns main-col">
               <h3>Beratung</h3>
@@ -199,31 +210,17 @@
         </div>
       </div>
     </section> <!-- contact section End-->
-
-
     <!-- footer -->
     <footer>
-
         <div class="row">
-
             <div class="twelve columns">
-
-                <ul class="social-links">
-                    <li><a href="https://twitter.com/nuritnt/"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/nuritnt/"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://github.com/nuritnt"><i class="fa fa-github"></i></a></li>
-                </ul>
-
                 <ul class="copyright">
                     <li>October 2017</li><li>Karin Schleifer</li>
                     <li>Website: Marion Schleifer</li>
                 </ul>
-
             </div>
             <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="fa fa-chevron-circle-up fa-lg"></i></a></div>
-
         </div>
-
     </footer> <!-- Footer End-->
 
     <!-- Java Script -->
