corrections according to feedback

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       </nav>
       <div class="row banner">
           <div class="banner-text">
-              <h1 class="responsive-headline">Skriptorium</h1>
-              <h3>
+              <img src="../pictures/logo.png">
+              <h2 class="header-title">
                 20 Jahre Erfahrung im Schreiben,
                 Forschen und Archivieren,
                 in Geschichts- und Kulturprojekten ...
-              </h3>
+              </h2>
           </div>
       </div>
       <p class="scrolldown">
@@ -67,7 +67,7 @@
         </div>
         <div class="four columns main-col">
           <ul>
-            <li>Karin Schleifer</li>
+            <li class="name">Karin Schleifer</li>
             <li>lic. phil. (Geschichte und Politikwissenschaft)</li>
             <li>Historikerin / Autorin</li>
             <li>Wissenschaftliche Archivarin</li>
@@ -88,41 +88,23 @@
             und auf Ihr Zielpublikum.»</h2>
           <div class="row texte">
             <div class="six columns main-col">
-              <h3>Texte aller Art</h3>
               <ul>
                 <li>Journalistische Texte</li>
-                <li>Historische Werke</li>
                 <li>Broschüren + Webseiten</li>
-                <li>Berichte + Reportagen</li>
+                <li>Wissenschaftliche Texte (Geschichte)</li>
                 <li>Politische Kommunikation</li>
+                <li>Redaktion + Lektorat</li>
               </ul>
             </div>
             <div class="six columns main-col publikationsliste">
-              <img src="../pictures/link_npg.jpg" />
-            </div>
-          </div>
-        </div>
-        <div class="nine columns main-col">
-          <div class="row">
-            <div class="six columns main-col">
-              <h3>Konzepte</h3>
-              <ul>
-                <li>Buchkonzepte</li>
-                <li>Beratung Buchprojekte</li>
-                <li>Jubiläen</li>
-                <li>Ausstellungen</li>
-                <li>Kampagnen</li>
-              </ul>
-            </div>
-            <div class="six columns main-col waffenbrueder">
-              <img src="../pictures/link_waffenbrueder_1.png" />
+
             </div>
           </div>
         </div>
       </div>
       <div class="row forschung">
         <div class="three columns header-col">
-          <h2>Forschung</h2>
+          <h2>Forschung + Vermittlung</h2>
         </div>
         <div class="nine columns main-col">
           <h2 class="title">«Jubiläum oder Kulturprojekt?
@@ -131,16 +113,16 @@
           </h2>
           <div class="row">
             <div class="six columns main-col">
-              <h3>Recherchen</h3>
               <ul>
                 <li>Historische Forschung</li>
                 <li>Archivrecherchen</li>
                 <li>Transkriptionen</li>
                 <li>Geschichtsvermittlung</li>
+                <li>Kulturprojekte</li>
               </ul>
             </div>
             <div class="six columns main-col archiv">
-              <img src="../pictures/archiv.jpg" />
+
             </div>
           </div>
         </div>
@@ -156,27 +138,16 @@
           </h2>
           <div class="row">
             <div class="six columns main-col">
-              <h3>Beratung</h3>
               <ul>
-                <li>Augenschein + erstes Feedback</li>
-                <li>Kurzgutachten</li>
-                <li>Empfehlungen</li>
-              </ul>
-              <h3>Erschliessung</h3>
-              <ul>
-                <li>Kleinere Erschliessungsprojekte</li>
-                <li>Bewertung + Ordnen</li>
-                <li>Verzeichnisse erstellen</li>
-              </ul>
-              <h3>Projektleitung</h3>
-              <ul>
-                <li>Anleitung Ihrer Fach- oder Hilfskraft</li>
-                <li>Begleitung Ihres Erschliessungsprojekts</li>
+                <li>Beratung</li>
+                <li>Gutachten</li>
+                <li>Erschliessung</li>
+                <li>Projektbegleitung</li>
                 <li>Qualitätskontrolle</li>
               </ul>
             </div>
             <div class="six columns main-col sauordnung">
-              <img src="../pictures/sauordnung.jpg" />
+              <img src="../pictures/archivierung.jpg" />
             </div>
           </div>
         </div>
@@ -187,7 +158,7 @@
     <section id="contact">
       <div class="row contact-details">
         <div class="three columns header-col">
-          <h2>Kontakt</h2>
+          <h2>Kontakt / Impressum</h2>
         </div>
         <div class="three columns main-col">
           <h3>Atelier</h3>
