--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
       <div class="row banner">
           <div class="banner-text">
-              <img src="../pictures/logo.png">
+              <img src="../pictures/logo3.jpg"\ class="logo">
               <h2 class="header-title">
                 20 Jahre Erfahrung im Schreiben,
                 Forschen und Archivieren,
@@ -88,7 +88,7 @@
             und auf Ihr Zielpublikum.»</h2>
           <div class="row texte">
             <div class="six columns main-col">
-              <ul>
+              <ul class="textarbeit-list">
                 <li>Journalistische Texte</li>
                 <li>Broschüren + Webseiten</li>
                 <li>Wissenschaftliche Texte (Geschichte)</li>
@@ -97,7 +97,7 @@
               </ul>
             </div>
             <div class="six columns main-col publikationsliste">
-
+              <img src="../pictures/textarbeit.jpg" \>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
           </h2>
           <div class="row">
             <div class="six columns main-col">
-              <ul>
+              <ul class="forschung-list">
                 <li>Historische Forschung</li>
                 <li>Archivrecherchen</li>
                 <li>Transkriptionen</li>
@@ -122,7 +122,7 @@
               </ul>
             </div>
             <div class="six columns main-col archiv">
-
+              <img src="../pictures/forschung.jpg" \>
             </div>
           </div>
         </div>
