--- a/project/index.html
+++ b/project/index.html
@@ -41,7 +41,7 @@
       </nav>
       <div class="row banner">
           <div class="banner-text">
-              <img src="../pictures/logo3.jpg"\ class="logo">
+              <img src="../pictures/logo.jpg"\ class="logo">
               <h2 class="header-title">
                 20 Jahre Erfahrung im Schreiben,
                 Forschen und Archivieren,
@@ -195,6 +195,21 @@
     </footer> <!-- Footer End-->
 
     <!-- Java Script -->
+
+    <script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyAxJDb34HHwVsoGxiokft7zj9FXBzy4X0M",
+        authDomain: "skriptorium-a20e4.firebaseapp.com",
+        databaseURL: "https://skriptorium-a20e4.firebaseio.com",
+        projectId: "skriptorium-a20e4",
+        storageBucket: "",
+        messagingSenderId: "43064057650"
+      };
+      firebase.initializeApp(config);
+    </script>
+
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
     <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
