--- a/project/index.html
+++ b/project/index.html
@@ -41,7 +41,7 @@
       </nav>
       <div class="row banner">
           <div class="banner-text">
-              <img src="../pictures/logo.jpg"\ class="logo">
+              <a href="../pictures/flyer.pdf" target="_blank"><img src="../pictures/logo.jpg" class="logo"></a>
               <h2 class="header-title">
                 20 Jahre Erfahrung im Schreiben,
                 Forschen und Archivieren,
